# ClipboardXX

./: .clang-format  .clang-tidy  .gitignore  CMakeLists.txt  ClipboardXX.hpp  LICENSE  README.md
example/: copy.cpp  paste.cpp
examples/: copy.cpp  paste.cpp
include/: ClipboardXX.hpp  clipboardxx.hpp
include/detail/: exception.hpp  interface.hpp  linux.hpp  windows.hpp
include/detail/linux/: provider.hpp  x11_event_handler.hpp  x11_provider.hpp  xcb.hpp  xcb_event.hpp
include/detail/linux/xcb/: xcb.hpp  xcb_event.hpp
test/: test.cpp  utils.hpp
tools/: format.sh  lint.sh  paths.sh
